--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,13 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 * {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 html {
@@ -73,6 +81,8 @@ a {
     z-index: 999;
     opacity: 0;
     visibility: hidden;
+    -webkit-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
 }
 
@@ -98,6 +108,8 @@ a {
 }
 
 .menu-dropdown li:hover a {
+    background: -webkit-gradient(linear, left top, right top, from(#84fab0), color-stop(51%, #8fd3f4), to(#84fab0));
+    background: -o-linear-gradient(left, #84fab0 0%, #8fd3f4 51%, #84fab0 100%);
     background: linear-gradient(to right, #84fab0 0%, #8fd3f4 51%, #84fab0 100%);
     border-radius: 10px;
     margin: 8px 5px;
@@ -107,7 +119,8 @@ a {
 
 .menu-dropdown {
     border-radius: 0 0 12px 12px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     background-color: #ffffff;
     border-radius: 10px;
 }
@@ -142,11 +155,17 @@ a {
 .accordion-label i.icon {
     margin-left: 5px;
     display: inline-block;
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: -webkit-transform 0.3s;
+    -o-transition: transform 0.3s;
     transition: transform 0.3s;
+    transition: transform 0.3s, -webkit-transform 0.3s;
 }
 
 .accordion-checkbox:checked + .accordion-label .fa-angle-down {
-    transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+            transform: rotate(180deg);
 }
 
 .accordion-label .fa-angle-down {
@@ -183,7 +202,8 @@ a {
 }
 /* Header */
 .header {
-    box-shadow: 0px 7px 13px rgba(141, 141, 141, 0.17);
+    -webkit-box-shadow: 0px 7px 13px rgba(141, 141, 141, 0.17);
+            box-shadow: 0px 7px 13px rgba(141, 141, 141, 0.17);
     padding-top: 26px;
     position: absolute;
     top: -26px;
@@ -192,8 +212,12 @@ a {
 }
 
 .navbar {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 12px 0;
    
 }
@@ -204,10 +228,13 @@ a {
     background-color: rgba(255, 255, 255, 0.9); /* Màu nền khi navbar dính */
     background-color: #ffffff;
     background-color: #f3f3f3;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Đổ bóng khi navbar dính */
+    -webkit-box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Đổ bóng khi navbar dính */
   }
 
 .navbar>ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-left: 50px;
 }
@@ -223,7 +250,9 @@ a {
 }
 
 .navbar ul li a {
-    align-items: center; 
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; 
     position: relative;
 }
 
@@ -234,14 +263,21 @@ a {
     height: 4px;
     top: -12px;
     left: 30%;
+    background: -o-linear-gradient(338.59deg, #027029 24.85%, #24ea16eb 95.39%);
     background: linear-gradient(111.41deg, #027029 24.85%, #24ea16eb 95.39%);
     border-radius: 2px;
-    transform: scale(0);
+    -webkit-transform: scale(0);
+        -ms-transform: scale(0);
+            transform: scale(0);
+    -webkit-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out;
 }
 
 .navbar ul li a:hover:after {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+        -ms-transform: scale(1);
+            transform: scale(1);
 }
 
 .navbar>ul>li>a:hover {
@@ -251,6 +287,8 @@ a {
 .navbar ul li a,
 .navbar ul li a:after,
 .navbar ul li a:before {
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
   transition: all .5s;
 }
 
@@ -272,9 +310,16 @@ a {
 /* Hero */
 .hero {
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     background: #e6f0ff;
     height: calc(112vh - 90px);
 
@@ -298,7 +343,8 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 .hero__content {
     width: 51%;
@@ -313,6 +359,8 @@ a {
     line-height: 1.5;
     letter-spacing: 0.01em;
     color: var(--neutral-white);
+    background: -webkit-gradient(linear, left top, right top, from(#DF1067), to(#F45C43));
+    background: -o-linear-gradient(left, #DF1067 0%, #F45C43 100%);
     background: linear-gradient(90deg, #DF1067 0%, #F45C43 100%);
     -webkit-background-clip: text;
     display: inline-block;
@@ -324,6 +372,7 @@ a {
     font-size: 6.4rem;
     line-height: 64px;
     color: var(--text-gray-900);
+    background: -o-radial-gradient(center center, circle, #95CFD5 0%, #64F38C 100%);
     background: radial-gradient(circle at center center, #95CFD5 0%, #64F38C 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -358,15 +407,24 @@ a {
 }
 
 .client__brand {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-top: 70px;
 }
 
 .client__brand a {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 90px;
     padding: 0 42px;
     border-radius: 12px;
@@ -378,8 +436,12 @@ a {
 }
 
 .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .row-desc {
@@ -404,7 +466,9 @@ a {
     position: absolute;
     top: -10px;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
     content: "";
     display: inline-block;
     width: 41px;
@@ -425,8 +489,12 @@ a {
 }
 
 .guides__list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-top: 70px;
 }
 
@@ -443,13 +511,19 @@ a {
 
 }
 .guides__link{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-top: 10px;
     font-size: 1.4rem;
     font-weight: 600;
     color: var(--brand-primary);
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .arrow{
@@ -457,8 +531,12 @@ a {
 }
 
 .guides__cta {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-top: 50px;
 }
 
@@ -493,16 +571,24 @@ a {
     color: var(--neutral-grey);
 }
 .features__link{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     font-size: 1.8rem;
     font-weight: 600;
     color: var(--brand-primary);
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .features__list{
     margin-top: 70px;
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 30px 1fr 30px 1fr;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
 }
@@ -510,7 +596,8 @@ a {
 .features__item{
     background: var(--neutral-white);
     border-radius: 12px;
-    box-shadow: 0 15px 30px 0 rgba(11, 195, 99, 0.1);
+    -webkit-box-shadow: 0 15px 30px 0 rgba(11, 195, 99, 0.1);
+            box-shadow: 0 15px 30px 0 rgba(11, 195, 99, 0.1);
     display: table;
 }
 
@@ -537,6 +624,8 @@ a {
 
 .features__thumb {
     padding: 16px 16px 0!important;
+    -webkit-transition: all .35s;
+    -o-transition: all .35s;
     transition: all .35s;
     overflow: hidden;
     margin: 0;
@@ -547,21 +636,28 @@ a {
     border-radius: 24px;
     display: block;
     overflow: hidden;
+    -webkit-transition: all .35s;
+    -o-transition: all .35s;
     transition: all .35s;
     -webkit-backface-visibility: hidden;
     -webkit-transform: translate3d(0,0,0);
 }
 
 .features__thumb a:hover img {
-    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1);
 }
 
 .features__thumb__img {
     width: 100%;
     height: 227px;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
+    -webkit-transition: all .35s;
+    -o-transition: all .35s;
     transition: all .35s;
 }
 .features__name {
@@ -573,6 +669,8 @@ a {
 
 .features__name-color {
     color: var(--neutral-title);
+    -webkit-transition: all .35s;
+    -o-transition: all .35s;
     transition: all .35s;
 }
 
@@ -594,9 +692,15 @@ a {
     display: block;
 }
 .footer__wrapper{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     position: relative;
     padding: 0 16px 16px;
 }
@@ -605,8 +709,13 @@ a {
     margin-left: 0;
     color: var(--neutral-title);
     font-size: 2.4rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 .features__item__price-style{
     font-size: 2.4rem;
@@ -620,13 +729,19 @@ a {
     border: none!important;
 }
 .footer__right a:hover {
-    transform: translateY(5px);
-    box-shadow: 0 0 0 #023f0f!important;
+    -webkit-transform: translateY(5px);
+        -ms-transform: translateY(5px);
+            transform: translateY(5px);
+    -webkit-box-shadow: 0 0 0 #023f0f!important;
+            box-shadow: 0 0 0 #023f0f!important;
 }
 
 .btn-hover:hover {
-    transform: translateY(5px);
-    box-shadow: 0 0 0 #023f0f!important;
+    -webkit-transform: translateY(5px);
+        -ms-transform: translateY(5px);
+            transform: translateY(5px);
+    -webkit-box-shadow: 0 0 0 #023f0f!important;
+            box-shadow: 0 0 0 #023f0f!important;
 }
 
 .btn-hover{
@@ -644,8 +759,11 @@ a {
     -webkit-border-radius: 24px;
     display: inline-block;
     z-index: 20;
-    box-shadow: 0 5px 0 #023f0f;
+    -webkit-box-shadow: 0 5px 0 #023f0f;
+            box-shadow: 0 5px 0 #023f0f;
     text-decoration: none;
+    -webkit-transition: all .3s ease-out;
+    -o-transition: all .3s ease-out;
     transition: all .3s ease-out;
 }
 
@@ -654,8 +772,12 @@ a {
 }
 .detail__wrapper{
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-bottom: 33px;
     margin-top: 33px;
     position: relative;
@@ -682,8 +804,12 @@ a {
     background-color: rgba(66,135,121,.1);
 }
 .detail__item{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
 }
 
 .detail__item:last-child {
@@ -716,8 +842,12 @@ a {
 
 .body {
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 370px;
     background:#d5e9e0;
     background:#8beeb8;
@@ -730,11 +860,15 @@ a {
 }
 
 .footer .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
 .footer .row-top {
-    column-gap: 185px;
+    -webkit-column-gap: 185px;
+       -moz-column-gap: 185px;
+            column-gap: 185px;
 }
 
 /* MODAL LOGIN  */
@@ -817,6 +951,8 @@ a {
 }
 
 .stats.row{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 .stats__media{
@@ -829,7 +965,8 @@ a {
     width: 400px;
     height: 460px;
     border-radius: 12px;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 .stats__trend{
     position: absolute;
@@ -862,12 +999,17 @@ a {
     background: #e9e9e9;
 }
 .stats__block{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     gap: 16px 14px;
     margin-top: 26px;
 }
 .stats__group{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -878,7 +1020,8 @@ a {
     width: 16px;
     height: 16px;
     margin-left: -3px;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     border-radius: 50%;
     background: var(--bg-color, #fff);
     font-weight: 450;
@@ -921,7 +1064,9 @@ a {
     border-radius: 12px;
 }
 .row-qty{
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-top: 110px;
     padding: 0 32px;
 }
@@ -939,9 +1084,15 @@ a {
 }
 
 .footer .row-bottom {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-top: 81px;
 }
 
@@ -967,6 +1118,8 @@ a {
     z-index: 1;
     opacity: 0;
     visibility: hidden;
+    -webkit-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
     transition: 0.5s ease;
 }
 .modal-box {
@@ -1009,12 +1162,19 @@ a {
     padding: 10px 24px;
     background: #fff;
     border: solid 1px rgba(18,58,50,.12);
-    align-items: baseline;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     text-decoration: none;
     position: relative;
-    align-items: center;
-    justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
 }
 .modal__advanced span {
     font-size: 14px;
@@ -1065,9 +1225,15 @@ a {
     width: 100%;
 }
 .form-check {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-top: 16px;
     margin-bottom: 24px;
 }
@@ -1076,7 +1242,10 @@ a {
     padding-left: 26px;
     cursor: pointer;
     font-size: 22px;
-    user-select: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
     line-height: 21px;
 }
 .remember-checkbox label {
@@ -1174,11 +1343,15 @@ a {
     position: absolute;
     left: 50%;
     bottom: -40px;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
 }
 .location__list {
     padding-top: 74px;
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 10px 1fr 10px 1fr 10px 1fr;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 10px;
 
@@ -1194,12 +1367,17 @@ a {
     width: 100%;
     height: auto;
     border-radius: 5px;
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
     transition: all .3s;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 
 .location__item:hover img {
-    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1);
 }
 
 .location__item img {
@@ -1234,12 +1412,17 @@ a {
     width: 100%;
     height: auto;
     border-radius: 5px;
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
     transition: all .3s;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 
 .splide__slide:hover img {
-    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1);
 }
 
 .splide__slide a {
@@ -1247,7 +1430,6 @@ a {
     border-radius: 24px;
     overflow: hidden;
 }
-
 
 
 
